# waifu2x-opt

./: README.md
avx2/: main.cpp  waifu2x.cpp  waifu2x.h
include/: waifu2x.h  waifu2x.hpp
models/: README.txt
src/: CMakeLists.txt
src/frontend/: CMakeLists.txt  main.cpp  options.h
src/waifu2x/: CMakeLists.txt  waifu2x.cpp
src/waifu2x/avx/: avx_impl.cpp  avx_impl.h
src/waifu2x/avx2/: .impl.cpp.swp  avx2_impl.cpp  avx2_impl.h
src/waifu2x/common/: aligned_buffer.h  impl_base.h  model.cpp  model.h  x86.h
src/waifu2x/dft_avx/: dft_avx_impl.cpp  dft_avx_impl.h  dft_table.h
